2001-01-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 13388: Src/Zle/compmatch.c: fix for mergin two CLF_MID entries
 	in cline lists (with two equal prefixes it thought there were
 	characters missing)
	
	* 13384: Src/signals.c: make signal queueing variables be exported
 	to modules
	
2001-01-19  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 13370 (modified): Src/params.c: do not modify environment when
	importing it - some library functions may access it. When importing
	colon arrays, replenv() tried to free unallocated memory. Remove
	replenv() as it is now redundant.

	* 13380: configure.in: replace AC_CHECK_LIB(...,tgetent) with
	AC_SEARCH_LIBS(tgetent,...) to allow user to override default
	library selection

2001-01-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 13374: Src/Zle/compcore.c, Src/Zle/compctl.c, Src/Zle/complist.c,
 	Src/Zle/compresult.c, Src/Zle/zle_main.c, Src/Zle/zle_tricky.c:
 	temporarily allow recursive completion when called from menu
 	selection

2001-01-18  Peter Stephenson  <pws@csr.com>

	* 13302: Functions/Zftp/zftp_progress: division by zero

2001-01-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 13365: Src/builtin.c, Src/exec.c, Src/glob.c, Src/hashtable.c,
 	Src/hist.c, Src/init.c, Src/input.c, Src/jobs.c, Src/math.c,
 	Src/mem.c, Src/module.c, Src/params.c, Src/parse.c, Src/prompt.c,
 	Src/signals.c, Src/signals.h, Src/subst.c, Src/utils.c,
 	Src/watch.c, Src/Modules/zftp.c, Src/Modules/zpty.c,
 	Src/Modules/zutil.c, Src/Zle/compcore.c, Src/Zle/complist.c,
 	Src/Zle/computil.c, Src/Zle/zle_main.c, Src/Zle/zle_tricky.c:
 	remove 13108 (trap queues); replace with signal queueing to ensure
 	that user signal handlers are only executed when it is safe to run
 	them
	
	* 13364: Src/Zle/compctl.c: fix for ol' compctl when completing
 	hash keys
	
2001-01-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 13349: Src/Zle/compmatch.c, Src/Zle/compresult.c: two more fixes
 	for completion matching and reporting interesting positions
	